--- a/src/css/index.css
+++ b/src/css/index.css
@@ -48,13 +48,15 @@ body,
     text-align: center;
 }
 
-.date p{
+.date p {
     font-size: 30px;
     line-height: 60px;
+
 }
-.todo{
+
+.todo {
     width: 95%;
-    height: 720px;
+    height: 740px;
     background-color: #89f7fe;
     margin-top: 10px;
     border-radius: 5px;
@@ -77,43 +79,74 @@ body,
 .daysContainer {
     width: 1080px;
     height: 100%;
+    position: relative;
 }
+
 
 .days {
     float: left;
     width: 180px;
-    height: 125px;
+    height: 135px;
     padding: 10px;
     border: 1px solid #e4e4e4;
 }
-.days_tips{
+
+.days_process_container {
+    width: 100px;
+    height: 6px;
+    border-radius: 5px;
+    margin: 0 auto;
+}
+
+.days_process {
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-image: linear-gradient(to right, #fee140 0%, #fa709a 100%);
+}
+
+.enterInfo {
+    cursor: pointer;
+    width: 100%;
+    height: 80px;
+    margin-bottom: 10px;
+}
+
+
+.days_tips {
     width: 50px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+
 }
-.days_tips span{
+
+.days_tips span {
     display: block;
     width: 10px;
     height: 10px;
     border-radius: 50%;
+
 }
 
-.days_tips span:nth-child(1){
+.days_tips span:nth-child(1) {
     display: block;
     width: 10px;
     height: 10px;
     border-radius: 50%;
     background-color: red;
 }
-.days_tips span:nth-child(2){
+
+.days_tips span:nth-child(2) {
     display: block;
     width: 10px;
     height: 10px;
     border-radius: 50%;
     background-color: green;
 }
-.days_tips span:nth-child(3){
+
+.days_tips span:nth-child(3) {
     display: block;
     width: 10px;
     height: 10px;
@@ -121,15 +154,109 @@ body,
     background-color: blue;
 }
 
-.days_time{
+.days_time {
     width: 100%;
     height: 50px;
     text-align: center;
     line-height: 60px;
     font-size: 30px;
 }
-.days_todos{
+
+.days_lunar {
     width: 100%;
     height: 50px;
     padding: 5px;
+    text-align: center;
+}
+
+.chooseTime {
+    width: 390px;
+    height: 45px;
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    border-radius: 5px;
+    opacity: 0.6;
+    padding-top: 11px;
+    padding-left: 11px;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+#chooseYears,
+#chooseMonths {
+    cursor: pointer;
+    width: 80px;
+    height: 20px;
+    border-radius: 5px;
+    font-size: 14px;
+    border: none;
+}
+
+
+.options {
+    width: 250px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    position: relative;
+}
+
+.options_btn {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    bottom: 5px;
+    left: 0;
+    border-radius: 50%;
+    background: url('../../assets/icon/settings-3-line.png');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    cursor: pointer;
+    opacity: 0.8;
+    filter: invert(0.1);
+}
+
+.options_selections {
+    position: absolute;
+    width: 150px;
+    height: 200px;
+    background-image: linear-gradient(to bottom, #F3F3F3 0%, #eef1f5 50%, #fff 100%);
+    left: 0;
+    bottom: 50px;
+    border-radius: 5px;
+    border-bottom-left-radius: 0;
+    font-size: 14px;
+    padding: 5px;
+}
+
+.options_selections p {
+    display: block;
+    text-align: center;
+    height: 22px;
+    line-height: 22px;
+    margin-top: 12px;
+    border-bottom: 1px solid red;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.options_selections p:hover {
+    background-color: red;
+    color: white;
+}
+
+.options_selections::before {
+    content: "";
+    width: 0px;
+    height: 0px;
+    position: absolute;
+    border: 15px solid #e4e4e4;
+    border-top-color: #fff;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    bottom: -30px;
+    left: 0;
 }
